cmake_minimum_required(VERSION 2.6)

option(USE_LUA53 "Controls whether the library will be for Lua 5.3 or Ravi, default is OFF" OFF)

SET(CMAKE_MODULE_PATH
  "${CMAKE_CURRENT_SOURCE_DIR}/cmake"
  "${CMAKE_MODULE_PATH}")

include(${CMAKE_INSTALL_PREFIX}/cmake/lua-config.cmake)

message(STATUS "LUA_INCLUDE_DIR: ${LUA_INCLUDE_DIR}")
message(STATUS "LUA_LIBRARIES  : ${LUA_LIBRARIES}")

message(STATUS "LUA_INCDIR     : ${LUA_INCDIR}")
message(STATUS "LUA_LIBDIR     : ${LUA_LIBDIR}")
message(STATUS "LUA_BINDIR     : ${LUA_BINDIR}")
message(STATUS "LUALIB         : ${LUALIB}")
message(STATUS "LIBDIR (LUA_CPATH)  : ${LIBDIR}")
message(STATUS "LUADIR (LUA_PATH)   : ${LUADIR}")

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_BINARY_DIR}")
INCLUDE_DIRECTORIES("${LUA_INCDIR}")
LINK_DIRECTORIES("${LUA_LIBDIR}")

SET(src 
  "${CMAKE_CURRENT_SOURCE_DIR}/pb.c"
  )

SET(luasrc 
  "${CMAKE_CURRENT_SOURCE_DIR}/protoc.lua"
  )

# When using MSVC
IF(MSVC)
  # we want to respect the standard, and we are bored of those **** .
  ADD_DEFINITIONS(-D_CRT_SECURE_NO_DEPRECATE=1)
ENDIF(MSVC)

ADD_LIBRARY("pb" SHARED ${src})
set_target_properties("pb" PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES("pb" PROPERTIES
  IMPORT_PREFIX "lib")
IF(APPLE)
  SET_TARGET_PROPERTIES("pb" PROPERTIES
    LINK_FLAGS "-undefined dynamic_lookup")
ENDIF()
SET_TARGET_PROPERTIES("pb" PROPERTIES
    DEFINE_SYMBOL "PB_IMPLEMENTATION")
    
INSTALL(FILES ${luasrc} DESTINATION ${LUADIR})
INSTALL(TARGETS pb
  LIBRARY DESTINATION ${LIBDIR}
  RUNTIME DESTINATION ${LUA_BINDIR})

IF(LUALIB)
  TARGET_LINK_LIBRARIES(pb ${LUALIB})
ENDIF()
